Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO instrucciones FIN
Rule 2     instrucciones -> instruccion
Rule 3     instrucciones -> instruccion instrucciones
Rule 4     instruccion -> definicion
Rule 5     instruccion -> escritura
Rule 6     instruccion -> asignacion
Rule 7     definicion -> DEFINIR tdato COMO tipo_dato PUNTO_Y_COMA
Rule 8     asignacion -> tdato ASIGNACION expresion PUNTO_Y_COMA
Rule 9     tdato -> ID
Rule 10    tipo_dato -> ENTERO
Rule 11    tipo_dato -> REAL
Rule 12    escritura -> ESCRIBIR expresion PUNTO_Y_COMA
Rule 13    expresion -> ID
Rule 14    expresion -> DIGITO
Rule 15    expresion -> CADENA
Rule 16    expresion -> expresion SUMA expresion
Rule 17    expresion -> expresion RESTA expresion
Rule 18    expresion -> expresion MULTIPLICACION expresion
Rule 19    expresion -> expresion DIVISION expresion
Rule 20    expresion -> expresion MODULO expresion
Rule 21    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 22    expresion -> CADENA SUMA CADENA

Terminals, with rules where they appear

ASIGNACION           : 8
CADENA               : 15 22 22
COMO                 : 7
DEFINIR              : 7
DIGITO               : 14
DIVISION             : 19
ENTERO               : 10
ESCRIBIR             : 12
FIN                  : 1
ID                   : 9 13
INICIO               : 1
MODULO               : 20
MULTIPLICACION       : 18
PARENTESIS_DER       : 21
PARENTESIS_IZQ       : 21
PUNTO_Y_COMA         : 7 8 12
REAL                 : 11
RESTA                : 17
SUMA                 : 16 22
error                : 

Nonterminals, with rules where they appear

asignacion           : 6
definicion           : 4
escritura            : 5
expresion            : 8 12 16 16 17 17 18 18 19 19 20 20 21
instruccion          : 2 3
instrucciones        : 1 3
programa             : 0
tdato                : 7 8
tipo_dato            : 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO instrucciones FIN

    INICIO          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIO . instrucciones FIN
    (2) instrucciones -> . instruccion
    (3) instrucciones -> . instruccion instrucciones
    (4) instruccion -> . definicion
    (5) instruccion -> . escritura
    (6) instruccion -> . asignacion
    (7) definicion -> . DEFINIR tdato COMO tipo_dato PUNTO_Y_COMA
    (12) escritura -> . ESCRIBIR expresion PUNTO_Y_COMA
    (8) asignacion -> . tdato ASIGNACION expresion PUNTO_Y_COMA
    (9) tdato -> . ID

    DEFINIR         shift and go to state 8
    ESCRIBIR        shift and go to state 10
    ID              shift and go to state 11

    instrucciones                  shift and go to state 3
    instruccion                    shift and go to state 4
    definicion                     shift and go to state 5
    escritura                      shift and go to state 6
    asignacion                     shift and go to state 7
    tdato                          shift and go to state 9

state 3

    (1) programa -> INICIO instrucciones . FIN

    FIN             shift and go to state 12


state 4

    (2) instrucciones -> instruccion .
    (3) instrucciones -> instruccion . instrucciones
    (2) instrucciones -> . instruccion
    (3) instrucciones -> . instruccion instrucciones
    (4) instruccion -> . definicion
    (5) instruccion -> . escritura
    (6) instruccion -> . asignacion
    (7) definicion -> . DEFINIR tdato COMO tipo_dato PUNTO_Y_COMA
    (12) escritura -> . ESCRIBIR expresion PUNTO_Y_COMA
    (8) asignacion -> . tdato ASIGNACION expresion PUNTO_Y_COMA
    (9) tdato -> . ID

    FIN             reduce using rule 2 (instrucciones -> instruccion .)
    DEFINIR         shift and go to state 8
    ESCRIBIR        shift and go to state 10
    ID              shift and go to state 11

    instruccion                    shift and go to state 4
    instrucciones                  shift and go to state 13
    definicion                     shift and go to state 5
    escritura                      shift and go to state 6
    asignacion                     shift and go to state 7
    tdato                          shift and go to state 9

state 5

    (4) instruccion -> definicion .

    DEFINIR         reduce using rule 4 (instruccion -> definicion .)
    ESCRIBIR        reduce using rule 4 (instruccion -> definicion .)
    ID              reduce using rule 4 (instruccion -> definicion .)
    FIN             reduce using rule 4 (instruccion -> definicion .)


state 6

    (5) instruccion -> escritura .

    DEFINIR         reduce using rule 5 (instruccion -> escritura .)
    ESCRIBIR        reduce using rule 5 (instruccion -> escritura .)
    ID              reduce using rule 5 (instruccion -> escritura .)
    FIN             reduce using rule 5 (instruccion -> escritura .)


state 7

    (6) instruccion -> asignacion .

    DEFINIR         reduce using rule 6 (instruccion -> asignacion .)
    ESCRIBIR        reduce using rule 6 (instruccion -> asignacion .)
    ID              reduce using rule 6 (instruccion -> asignacion .)
    FIN             reduce using rule 6 (instruccion -> asignacion .)


state 8

    (7) definicion -> DEFINIR . tdato COMO tipo_dato PUNTO_Y_COMA
    (9) tdato -> . ID

    ID              shift and go to state 11

    tdato                          shift and go to state 14

state 9

    (8) asignacion -> tdato . ASIGNACION expresion PUNTO_Y_COMA

    ASIGNACION      shift and go to state 15


state 10

    (12) escritura -> ESCRIBIR . expresion PUNTO_Y_COMA
    (13) expresion -> . ID
    (14) expresion -> . DIGITO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MODULO expresion
    (21) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (22) expresion -> . CADENA SUMA CADENA

    ID              shift and go to state 17
    DIGITO          shift and go to state 18
    CADENA          shift and go to state 19
    PARENTESIS_IZQ  shift and go to state 20

    expresion                      shift and go to state 16

state 11

    (9) tdato -> ID .

    ASIGNACION      reduce using rule 9 (tdato -> ID .)
    COMO            reduce using rule 9 (tdato -> ID .)


state 12

    (1) programa -> INICIO instrucciones FIN .

    $end            reduce using rule 1 (programa -> INICIO instrucciones FIN .)


state 13

    (3) instrucciones -> instruccion instrucciones .

    FIN             reduce using rule 3 (instrucciones -> instruccion instrucciones .)


state 14

    (7) definicion -> DEFINIR tdato . COMO tipo_dato PUNTO_Y_COMA

    COMO            shift and go to state 21


state 15

    (8) asignacion -> tdato ASIGNACION . expresion PUNTO_Y_COMA
    (13) expresion -> . ID
    (14) expresion -> . DIGITO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MODULO expresion
    (21) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (22) expresion -> . CADENA SUMA CADENA

    ID              shift and go to state 17
    DIGITO          shift and go to state 18
    CADENA          shift and go to state 19
    PARENTESIS_IZQ  shift and go to state 20

    expresion                      shift and go to state 22

state 16

    (12) escritura -> ESCRIBIR expresion . PUNTO_Y_COMA
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MODULO expresion

    PUNTO_Y_COMA    shift and go to state 23
    SUMA            shift and go to state 24
    RESTA           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    MODULO          shift and go to state 28


state 17

    (13) expresion -> ID .

    PUNTO_Y_COMA    reduce using rule 13 (expresion -> ID .)
    SUMA            reduce using rule 13 (expresion -> ID .)
    RESTA           reduce using rule 13 (expresion -> ID .)
    MULTIPLICACION  reduce using rule 13 (expresion -> ID .)
    DIVISION        reduce using rule 13 (expresion -> ID .)
    MODULO          reduce using rule 13 (expresion -> ID .)
    PARENTESIS_DER  reduce using rule 13 (expresion -> ID .)


state 18

    (14) expresion -> DIGITO .

    PUNTO_Y_COMA    reduce using rule 14 (expresion -> DIGITO .)
    SUMA            reduce using rule 14 (expresion -> DIGITO .)
    RESTA           reduce using rule 14 (expresion -> DIGITO .)
    MULTIPLICACION  reduce using rule 14 (expresion -> DIGITO .)
    DIVISION        reduce using rule 14 (expresion -> DIGITO .)
    MODULO          reduce using rule 14 (expresion -> DIGITO .)
    PARENTESIS_DER  reduce using rule 14 (expresion -> DIGITO .)


state 19

    (15) expresion -> CADENA .
    (22) expresion -> CADENA . SUMA CADENA

  ! shift/reduce conflict for SUMA resolved as shift
    PUNTO_Y_COMA    reduce using rule 15 (expresion -> CADENA .)
    RESTA           reduce using rule 15 (expresion -> CADENA .)
    MULTIPLICACION  reduce using rule 15 (expresion -> CADENA .)
    DIVISION        reduce using rule 15 (expresion -> CADENA .)
    MODULO          reduce using rule 15 (expresion -> CADENA .)
    PARENTESIS_DER  reduce using rule 15 (expresion -> CADENA .)
    SUMA            shift and go to state 29

  ! SUMA            [ reduce using rule 15 (expresion -> CADENA .) ]


state 20

    (21) expresion -> PARENTESIS_IZQ . expresion PARENTESIS_DER
    (13) expresion -> . ID
    (14) expresion -> . DIGITO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MODULO expresion
    (21) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (22) expresion -> . CADENA SUMA CADENA

    ID              shift and go to state 17
    DIGITO          shift and go to state 18
    CADENA          shift and go to state 19
    PARENTESIS_IZQ  shift and go to state 20

    expresion                      shift and go to state 30

state 21

    (7) definicion -> DEFINIR tdato COMO . tipo_dato PUNTO_Y_COMA
    (10) tipo_dato -> . ENTERO
    (11) tipo_dato -> . REAL

    ENTERO          shift and go to state 32
    REAL            shift and go to state 33

    tipo_dato                      shift and go to state 31

state 22

    (8) asignacion -> tdato ASIGNACION expresion . PUNTO_Y_COMA
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MODULO expresion

    PUNTO_Y_COMA    shift and go to state 34
    SUMA            shift and go to state 24
    RESTA           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    MODULO          shift and go to state 28


state 23

    (12) escritura -> ESCRIBIR expresion PUNTO_Y_COMA .

    DEFINIR         reduce using rule 12 (escritura -> ESCRIBIR expresion PUNTO_Y_COMA .)
    ESCRIBIR        reduce using rule 12 (escritura -> ESCRIBIR expresion PUNTO_Y_COMA .)
    ID              reduce using rule 12 (escritura -> ESCRIBIR expresion PUNTO_Y_COMA .)
    FIN             reduce using rule 12 (escritura -> ESCRIBIR expresion PUNTO_Y_COMA .)


state 24

    (16) expresion -> expresion SUMA . expresion
    (13) expresion -> . ID
    (14) expresion -> . DIGITO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MODULO expresion
    (21) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (22) expresion -> . CADENA SUMA CADENA

    ID              shift and go to state 17
    DIGITO          shift and go to state 18
    CADENA          shift and go to state 19
    PARENTESIS_IZQ  shift and go to state 20

    expresion                      shift and go to state 35

state 25

    (17) expresion -> expresion RESTA . expresion
    (13) expresion -> . ID
    (14) expresion -> . DIGITO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MODULO expresion
    (21) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (22) expresion -> . CADENA SUMA CADENA

    ID              shift and go to state 17
    DIGITO          shift and go to state 18
    CADENA          shift and go to state 19
    PARENTESIS_IZQ  shift and go to state 20

    expresion                      shift and go to state 36

state 26

    (18) expresion -> expresion MULTIPLICACION . expresion
    (13) expresion -> . ID
    (14) expresion -> . DIGITO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MODULO expresion
    (21) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (22) expresion -> . CADENA SUMA CADENA

    ID              shift and go to state 17
    DIGITO          shift and go to state 18
    CADENA          shift and go to state 19
    PARENTESIS_IZQ  shift and go to state 20

    expresion                      shift and go to state 37

state 27

    (19) expresion -> expresion DIVISION . expresion
    (13) expresion -> . ID
    (14) expresion -> . DIGITO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MODULO expresion
    (21) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (22) expresion -> . CADENA SUMA CADENA

    ID              shift and go to state 17
    DIGITO          shift and go to state 18
    CADENA          shift and go to state 19
    PARENTESIS_IZQ  shift and go to state 20

    expresion                      shift and go to state 38

state 28

    (20) expresion -> expresion MODULO . expresion
    (13) expresion -> . ID
    (14) expresion -> . DIGITO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MODULO expresion
    (21) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (22) expresion -> . CADENA SUMA CADENA

    ID              shift and go to state 17
    DIGITO          shift and go to state 18
    CADENA          shift and go to state 19
    PARENTESIS_IZQ  shift and go to state 20

    expresion                      shift and go to state 39

state 29

    (22) expresion -> CADENA SUMA . CADENA

    CADENA          shift and go to state 40


state 30

    (21) expresion -> PARENTESIS_IZQ expresion . PARENTESIS_DER
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MODULO expresion

    PARENTESIS_DER  shift and go to state 41
    SUMA            shift and go to state 24
    RESTA           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    MODULO          shift and go to state 28


state 31

    (7) definicion -> DEFINIR tdato COMO tipo_dato . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 42


state 32

    (10) tipo_dato -> ENTERO .

    PUNTO_Y_COMA    reduce using rule 10 (tipo_dato -> ENTERO .)


state 33

    (11) tipo_dato -> REAL .

    PUNTO_Y_COMA    reduce using rule 11 (tipo_dato -> REAL .)


state 34

    (8) asignacion -> tdato ASIGNACION expresion PUNTO_Y_COMA .

    DEFINIR         reduce using rule 8 (asignacion -> tdato ASIGNACION expresion PUNTO_Y_COMA .)
    ESCRIBIR        reduce using rule 8 (asignacion -> tdato ASIGNACION expresion PUNTO_Y_COMA .)
    ID              reduce using rule 8 (asignacion -> tdato ASIGNACION expresion PUNTO_Y_COMA .)
    FIN             reduce using rule 8 (asignacion -> tdato ASIGNACION expresion PUNTO_Y_COMA .)


state 35

    (16) expresion -> expresion SUMA expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MODULO expresion

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MULTIPLICACION resolved as shift
  ! shift/reduce conflict for DIVISION resolved as shift
  ! shift/reduce conflict for MODULO resolved as shift
    PUNTO_Y_COMA    reduce using rule 16 (expresion -> expresion SUMA expresion .)
    PARENTESIS_DER  reduce using rule 16 (expresion -> expresion SUMA expresion .)
    SUMA            shift and go to state 24
    RESTA           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    MODULO          shift and go to state 28

  ! SUMA            [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]
  ! RESTA           [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]
  ! MULTIPLICACION  [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]
  ! DIVISION        [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]
  ! MODULO          [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]


state 36

    (17) expresion -> expresion RESTA expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MODULO expresion

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MULTIPLICACION resolved as shift
  ! shift/reduce conflict for DIVISION resolved as shift
  ! shift/reduce conflict for MODULO resolved as shift
    PUNTO_Y_COMA    reduce using rule 17 (expresion -> expresion RESTA expresion .)
    PARENTESIS_DER  reduce using rule 17 (expresion -> expresion RESTA expresion .)
    SUMA            shift and go to state 24
    RESTA           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    MODULO          shift and go to state 28

  ! SUMA            [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]
  ! RESTA           [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]
  ! MULTIPLICACION  [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]
  ! DIVISION        [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]
  ! MODULO          [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]


state 37

    (18) expresion -> expresion MULTIPLICACION expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MODULO expresion

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MULTIPLICACION resolved as shift
  ! shift/reduce conflict for DIVISION resolved as shift
  ! shift/reduce conflict for MODULO resolved as shift
    PUNTO_Y_COMA    reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .)
    PARENTESIS_DER  reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .)
    SUMA            shift and go to state 24
    RESTA           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    MODULO          shift and go to state 28

  ! SUMA            [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]
  ! RESTA           [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]
  ! MULTIPLICACION  [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]
  ! DIVISION        [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]
  ! MODULO          [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]


state 38

    (19) expresion -> expresion DIVISION expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MODULO expresion

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MULTIPLICACION resolved as shift
  ! shift/reduce conflict for DIVISION resolved as shift
  ! shift/reduce conflict for MODULO resolved as shift
    PUNTO_Y_COMA    reduce using rule 19 (expresion -> expresion DIVISION expresion .)
    PARENTESIS_DER  reduce using rule 19 (expresion -> expresion DIVISION expresion .)
    SUMA            shift and go to state 24
    RESTA           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    MODULO          shift and go to state 28

  ! SUMA            [ reduce using rule 19 (expresion -> expresion DIVISION expresion .) ]
  ! RESTA           [ reduce using rule 19 (expresion -> expresion DIVISION expresion .) ]
  ! MULTIPLICACION  [ reduce using rule 19 (expresion -> expresion DIVISION expresion .) ]
  ! DIVISION        [ reduce using rule 19 (expresion -> expresion DIVISION expresion .) ]
  ! MODULO          [ reduce using rule 19 (expresion -> expresion DIVISION expresion .) ]


state 39

    (20) expresion -> expresion MODULO expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MODULO expresion

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MULTIPLICACION resolved as shift
  ! shift/reduce conflict for DIVISION resolved as shift
  ! shift/reduce conflict for MODULO resolved as shift
    PUNTO_Y_COMA    reduce using rule 20 (expresion -> expresion MODULO expresion .)
    PARENTESIS_DER  reduce using rule 20 (expresion -> expresion MODULO expresion .)
    SUMA            shift and go to state 24
    RESTA           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    MODULO          shift and go to state 28

  ! SUMA            [ reduce using rule 20 (expresion -> expresion MODULO expresion .) ]
  ! RESTA           [ reduce using rule 20 (expresion -> expresion MODULO expresion .) ]
  ! MULTIPLICACION  [ reduce using rule 20 (expresion -> expresion MODULO expresion .) ]
  ! DIVISION        [ reduce using rule 20 (expresion -> expresion MODULO expresion .) ]
  ! MODULO          [ reduce using rule 20 (expresion -> expresion MODULO expresion .) ]


state 40

    (22) expresion -> CADENA SUMA CADENA .

    PUNTO_Y_COMA    reduce using rule 22 (expresion -> CADENA SUMA CADENA .)
    SUMA            reduce using rule 22 (expresion -> CADENA SUMA CADENA .)
    RESTA           reduce using rule 22 (expresion -> CADENA SUMA CADENA .)
    MULTIPLICACION  reduce using rule 22 (expresion -> CADENA SUMA CADENA .)
    DIVISION        reduce using rule 22 (expresion -> CADENA SUMA CADENA .)
    MODULO          reduce using rule 22 (expresion -> CADENA SUMA CADENA .)
    PARENTESIS_DER  reduce using rule 22 (expresion -> CADENA SUMA CADENA .)


state 41

    (21) expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER .

    PUNTO_Y_COMA    reduce using rule 21 (expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    SUMA            reduce using rule 21 (expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    RESTA           reduce using rule 21 (expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    MULTIPLICACION  reduce using rule 21 (expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    DIVISION        reduce using rule 21 (expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    MODULO          reduce using rule 21 (expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    PARENTESIS_DER  reduce using rule 21 (expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER .)


state 42

    (7) definicion -> DEFINIR tdato COMO tipo_dato PUNTO_Y_COMA .

    DEFINIR         reduce using rule 7 (definicion -> DEFINIR tdato COMO tipo_dato PUNTO_Y_COMA .)
    ESCRIBIR        reduce using rule 7 (definicion -> DEFINIR tdato COMO tipo_dato PUNTO_Y_COMA .)
    ID              reduce using rule 7 (definicion -> DEFINIR tdato COMO tipo_dato PUNTO_Y_COMA .)
    FIN             reduce using rule 7 (definicion -> DEFINIR tdato COMO tipo_dato PUNTO_Y_COMA .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for SUMA in state 19 resolved as shift
WARNING: shift/reduce conflict for SUMA in state 35 resolved as shift
WARNING: shift/reduce conflict for RESTA in state 35 resolved as shift
WARNING: shift/reduce conflict for MULTIPLICACION in state 35 resolved as shift
WARNING: shift/reduce conflict for DIVISION in state 35 resolved as shift
WARNING: shift/reduce conflict for MODULO in state 35 resolved as shift
WARNING: shift/reduce conflict for SUMA in state 36 resolved as shift
WARNING: shift/reduce conflict for RESTA in state 36 resolved as shift
WARNING: shift/reduce conflict for MULTIPLICACION in state 36 resolved as shift
WARNING: shift/reduce conflict for DIVISION in state 36 resolved as shift
WARNING: shift/reduce conflict for MODULO in state 36 resolved as shift
WARNING: shift/reduce conflict for SUMA in state 37 resolved as shift
WARNING: shift/reduce conflict for RESTA in state 37 resolved as shift
WARNING: shift/reduce conflict for MULTIPLICACION in state 37 resolved as shift
WARNING: shift/reduce conflict for DIVISION in state 37 resolved as shift
WARNING: shift/reduce conflict for MODULO in state 37 resolved as shift
WARNING: shift/reduce conflict for SUMA in state 38 resolved as shift
WARNING: shift/reduce conflict for RESTA in state 38 resolved as shift
WARNING: shift/reduce conflict for MULTIPLICACION in state 38 resolved as shift
WARNING: shift/reduce conflict for DIVISION in state 38 resolved as shift
WARNING: shift/reduce conflict for MODULO in state 38 resolved as shift
WARNING: shift/reduce conflict for SUMA in state 39 resolved as shift
WARNING: shift/reduce conflict for RESTA in state 39 resolved as shift
WARNING: shift/reduce conflict for MULTIPLICACION in state 39 resolved as shift
WARNING: shift/reduce conflict for DIVISION in state 39 resolved as shift
WARNING: shift/reduce conflict for MODULO in state 39 resolved as shift
